# lazy-rudder-paper

./: .gitignore  Makefile  PROVENANCE.md  README.md  config.example.toml  explore.html  index.html  lean.html  pyproject.toml  requirements.txt
docs/: _config.yml  explore.md  index.md  lean.md
lean/: .gitignore  NeuralGeometry_aggregator.lean  README.md  SubspaceOverlap.lean  lakefile.lean
manuscript/: .gitignore  Makefile  generate_lean_status.py  generate_tables.py  generate_values.py  lean_status.tex  main.tex  references.bib  tables.tex  values.tex
reproducibility/: source_manifest.generated.json  theorem_inventory.generated.md  theorem_status.generated.json  theorem_status.generated.yaml
scripts/: _paths.py  analytic_random_baseline.py  angular_fourier_delta_prime.py  behavior_geometry_link.py  bias_theory_autopsy.py  bitfit_dpo_strike.py  bitfit_dpo_strike_extended.py  clm_leak_train.py  clm_leak_train_1b.py  clm_leak_train_1b_seed117.py  compute_channel_partition.py  cross_probe_correlate.py  cross_probe_dry_run.py  cross_probe_manifest.json  cross_probe_score.py  dpo_clm_orthogonal_decomp.py  dpo_leak_train.py  dpo_leak_train_160m.py  dpo_leak_train_1b.py  dpo_leak_train_1b_seed117.py  dpo_leak_train_70m.py  dpo_leak_train_v2.py  fetch_checkpoints.py  generate_fig_A.config.json  generate_fig_A.py  generate_fig_B.config.json  generate_fig_B.py  generate_fig_C.config.json  generate_fig_C.py  generate_fig_D.config.json  generate_fig_D.py  generate_fig_E.config.json  generate_fig_E.py  generate_fig_F.py  generate_fig_G.config.json  generate_fig_G.py  (+16 more)
(+94 files in other folders)
